Fixed content z-index, fixed stripes jagged edges

--- a/src/css/layouts/main-container.less
+++ b/src/css/layouts/main-container.less
@@ -9,5 +9,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        position: relative;
+        z-index: 1;
     }
 }
